--- a/api-consumer-pact/package.json
+++ b/api-consumer-pact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pact-health-test",
+  "name": "api-consumer-pact",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,18 +8,16 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@pact-foundation/pact": "^12.3.0",
-    "@types/axios": "^0.14.0",
-    "axios": "^1.6.8",
-    "jest-junit": "^16.0.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-typescript": "^7.24.1",
+    "@pact-foundation/pact": "^12.3.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.12",
+    "axios": "^1.6.8",
     "babel-jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "jest": "^29.7.0"
   }
 }
